Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;


typedef struct
{
	char Texto[49];
} RelatorioGerencialLinha;


typedef struct
{
	int Count;
	RelatorioGerencialLinha Linhas[];
} RelatorioGerencial;

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_Create(INTPTR* ecfHandle);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_Destroy(INTPTR* ecfHandle);

DllImport int ECF_GetBaud(const INTPTR ecfHandle);

DllImport int ECF_GetDataBits(const INTPTR ecfHandle);

DllImport int ECF_GetModelo(const INTPTR ecfHandle);

DllImport int ECF_GetParity(const INTPTR ecfHandle);

DllImport int ECF_GetPorta(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetUltimoErro(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetBaud(const INTPTR ecfHandle, const int baud);

DllImport int ECF_SetDataBits(const INTPTR ecfHandle, const int dataBits);

DllImport int ECF_SetModelo(const INTPTR ecfHandle, const int modelo);

DllImport int ECF_SetParity(const INTPTR ecfHandle, const int parity);

DllImport int ECF_SetPorta(const INTPTR ecfHandle, const PCHAR porta);