Projetos/ACBr32_DLL/ACBr32/ACBrECFDll.pas

unit ACBrECFDll;

interface

uses
  SysUtils,
  Classes,
  ACBrECF,
  ACBrECFClass,
  ACBrDevice,
  ACBrUtil;

{Classe que armazena os EventHandlers para o componente ACBr}
type TEventHandlers = class
    procedure OnMsgPoucoPapel(Sender: TObject);
end;

{Handle para o componente TACBrECF }
type TECFHandle = record
  UltimoErro : String;
  ECF : TACBrECF;
  EventHandlers : TEventHandlers;
end;

{Ponteiro para o Handle }
type PECFHandle = ^TECFHandle;

{Records estilo C utilizados nos retornos das funções}

type TAliquotaRec = record
      Indice : array[0..3] of char;
      Aliquota : double;
      Tipo : char;
      Total : double;
      Sequencia : byte;
end;

type TFormaPagamentoRec = record
      Indice : array[0..3] of char;
      Descricao : array[0..29] of char;
      PermiteVinculado : boolean;
      Total : double;
end;

type TComprovanteNaoFiscalRec = record
    Indice: array[0..3] of char;
    Descricao: array[0..29] of char;
    PermiteVinculado: Boolean;
    FormaPagamento: array[0..3] of char;
    Total: Double ;
    Contador: Integer;
end;

type TRelatorioGerencialRec = record
    Indice: array[0..3] of char;
    Descricao: array[0..29] of char;
    Contador: Integer;
end;

type TDadosRZRec = record
     COO: integer;
     CFD: integer;
     CancelamentoISSQN: double;
     GNFC: integer;
     CRO: integer;
     ValorVendaBruta: double;
     TotalizadoresNaoFiscais: array of TComprovanteNaoFiscalRec;
     TotalizadoresNaoFiscaisLen : integer;
     ICMS: array of TAliquotaRec;
     ICMSLen : integer;
     AcrescimoICMS: double;
     DescontoICMS: double;
     NaoTributadoICMS: double;
     RelatorioGerencial: array of TRelatorioGerencialRec;
     RelatorioGerencialLen: integer;
     CRZ: integer;
     ISSQN: array of TAliquotaRec;
     ISSQNLen : integer;
     GRG: integer;
     ValorGrandeTotal: double;
     AcrescimoISSQN: double;
     NaoTributadoISSQN: double;
     IsentoICMS: double;
     SubstituicaoTributariaICMS: double;
     DataDaImpressora: double;
     TotalOperacaoNaoFiscal: double;
     DescontoISSQN: double;
     CancelamentoOPNF: double;
     AcrescimoOPNF: double;
     DescontoOPNF: double;
     CancelamentoICMS: double;
     GNF: integer;
     IsentoISSQN: double;
     SubstituicaoTributariaISSQN: double;
     VendaLiquida: double;
     CFC: integer;
     CCF: integer;
     TotalISSQN: double;
     TotalICMS: double;
     CDC: integer;
     CCDC: integer;
     NCN: integer;
     DataDoMovimento: double;
     MeiosDePagamento: array of TFormaPagamentoRec;
     MeiosDePagamentoLen: integer;
     NumeroCOOInicial: array[0..29] of char;
     NumeroDoECF: array[0..29] of char;
     NumeroDeSerie: array[0..29] of char;
     NumeroDeSerieMFD: array[0..29] of char;
     NumeroDaLoja: array[0..29] of char;
     TotalTroco: double;
end;

{Ponteiro para o Handle }
type PDadosRZRec = ^TDadosRZRec;


implementation

{
PADRONIZAÇÃO DAS FUNÇÕES:

        PARÂMETROS:
        Todas as funções recebem o parâmetro "handle" que é o ponteiro
        para o componente instanciado; Este ponteiro deve ser armazenado
        pela aplicação que utiliza a DLL;

        RETORNO:
        Todas as funções da biblioteca retornam um Integer com as possíveis Respostas:

                MAIOR OU IGUAL A ZERO: SUCESSO
                Outos retornos maior que zero indicam sucesso, com valor específico de cada função.

                MENOR QUE ZERO: ERROS

                  -1 : Erro ao executar;
                       Vide UltimoErro

                  -2 : ACBr não inicializado.

                  Outros retornos negativos indicam erro específico de cada função;

                  A função "UltimoErro" retornará a mensagem da última exception disparada pelo componente.
}

 procedure TEventHandlers.OnMsgPoucoPapel(Sender: TObject);
 begin
   {Handler para o evento OnMsgPoucoPapel - Esta procedure não faz nada, apenas substitui a notificação padrão do ACBr}
 end;

{
CRIA um novo componente TACBrECF retornando o ponteiro para o objeto criado.
Este ponteiro deve ser armazenado pela aplicação que utiliza a DLL e informado
em todas as chamadas de função relativas ao TACBrECF
}
Function ECF_Create(var ecfHandle: PECFHandle): Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  try

     New(ecfHandle);

     ecfHandle^.ECF := TACBrECF.Create(nil);
     ecfHandle^.EventHandlers := TEventHandlers.Create();
     ecfHandle^.ECF.ReTentar := False;
     ecfHandle^.ECF.ExibeMensagem := False;
     ecfHandle^.ECF.BloqueiaMouseTeclado := False;
     ecfHandle^.UltimoErro := '';
     ecfHandle^.ECF.OnMsgPoucoPapel := ecfHandle^.EventHandlers.OnMsgPoucoPapel;

     Result := 0;

  except
     on exception : Exception do
     begin
        Result := -1;
        ecfHandle^.UltimoErro := exception.Message;
     end
  end;

end;

{
DESTRÓI o objeto TACBrECF e libera a memória utilizada.
Esta função deve SEMPRE ser chamada pela aplicação que utiliza a DLL
quando o componente não mais for utilizado.
}
Function ECF_Destroy(var ecfHandle: PECFHandle): Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try

    ecfHandle^.ECF.Destroy();
    ecfHandle^.ECF := nil;

    Dispose(ecfHandle);
    ecfHandle := nil;
    Result := 0;

  except
     on exception : Exception do
     begin
        Result := -1;
        ecfHandle^.UltimoErro := exception.Message;
     end
  end;

end;

Function ECF_GetUltimoErro(const ecfHandle: PECFHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  try
     StrPLCopy(Buffer, ecfHandle^.UltimoErro, BufferLen);
     Result := length(ecfHandle^.UltimoErro);
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function ECF_Ativar(const ecfHandle: PECFHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Ativar;
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result  := -1;
     end
  end;

end;

Function ECF_Desativar(const ecfHandle: PECFHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Desativar;
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

{ Funções mapeando as propriedades do componente }

Function ECF_GetModelo(const ecfHandle: PECFHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := Integer(ecfHandle^.ECF.Modelo);
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_SetModelo(const ecfHandle: PECFHandle; const Modelo : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Modelo := TACBrECFModelo(Modelo);
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_GetPorta(const ecfHandle: PECFHandle; Buffer : pChar; const BufferLen : Integer) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
var
  StrTmp : String;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

 try
     StrTmp := ecfHandle^.ECF.Porta;
     StrPLCopy(Buffer, StrTmp, BufferLen);
     Result := length(StrTmp);
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_SetPorta(const ecfHandle: PECFHandle; const Porta : pChar) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Porta := Porta;
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_GetBaud(const ecfHandle: PECFHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := ecfHandle^.ECF.Device.Baud;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_SetBaud(const ecfHandle: PECFHandle; const Baud : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Device.Baud := Baud;
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_GetDataBits(const ecfHandle: PECFHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := ecfHandle^.ECF.Device.Data;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_SetDataBits(const ecfHandle: PECFHandle; const DataBits : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Device.Data := DataBits;
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_GetParity(const ecfHandle: PECFHandle) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     Result := Integer(ecfHandle^.ECF.Device.Parity);
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;

Function ECF_SetParity(const ecfHandle: PECFHandle; const Parity : Integer) : Integer; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF}  export;
begin

  if (ecfHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
     ecfHandle^.ECF.Device.Parity := TACBrSerialParity(Parity);
     Result := 0;
  except
     on exception : Exception do
     begin
        ecfHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;

end;
